Get some decent docs up

--- a/in/_layouts/default.html
+++ b/in/_layouts/default.html
@@ -25,12 +25,16 @@
 
     <div class="wrap">
       <div class="sidebar">
-        <a href="{{ site.baseurl }}/" class="logo">
+        <a href="https://github.com/corysimmons/postcss-ant" class="logo">
           <img src="{{ site.baseurl }}/img/postcss-ant-logo.svg">
         </a>
 
         <p>
           A size-getting function that accepts fractions, decimals, fixed numbers, and everything <b>in-between</b>.
+        </p>
+
+        <p>
+          By the guy who built Jeet and Lost.
         </p>
 
         <nav>
@@ -57,10 +61,26 @@
           <h3>Examples</h3>
           <div class="submenu">
             <a href="{{ site.baseurl }}/example/basic-usage">Basic Usage</a>
-            <a href="{{ site.baseurl }}/example/grids-by-looping">Grids by Looping</a>
-            <a href="{{ site.baseurl }}/example/asymmetrical-grids">Asymmetrical Grids</a>
-            <a href="{{ site.baseurl }}/example/combined-with-flexbox">Combined with Flexbox</a>
-            <a href="{{ site.baseurl }}/example/combined-with-the-grid-layout-spec">Combined with The Grid Layout Spec</a>
+            <a href="{{ site.baseurl }}/example/nth-grids-and-preprocessor-looping">nth Grids and Preprocessor Looping</a>
+            <a href="{{ site.baseurl }}/example/negative-margin-grids">negative-margin Grids</a>
+            <a href="#">
+              Combined with Flexbox
+              <span class="coming-soon">
+                <span>
+                  Coming<br>
+                  Soon
+                </span>
+              </span>
+            </a>
+            <a href="#">
+              Combined with The Grid Layout Spec
+              <span class="coming-soon">
+                <span>
+                  Coming<br>
+                  Soon
+                </span>
+              </span>
+            </a>
           </div>
         </nav>
       </div>
