--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% if page.title %}{{ page.title }} | {% endif %}postcss-ant</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}postcss-ant 🐜</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
   </head>
@@ -11,7 +11,6 @@
     <!--[if IE]>
       <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div>
     <![endif]-->
-
 
     <div class="overlay"></div>
 
@@ -46,11 +45,13 @@
             <a href="{{ site.baseurl }}/#flexboxs-strengths">Flexbox's Strengths</a>
             <a href="{{ site.baseurl }}/#why-postcss">Why PostCSS?</a>
             <a href="{{ site.baseurl }}/#postcss-calc">postcss-calc</a>
+            <a href="{{ site.baseurl }}/#why-9999-and-99999999">Why 99.99% and 99.999999?</a>
             <a href="{{ site.baseurl }}/#browser-support">Browser Support</a>
           </div>
 
           <h3>Usage</h3>
           <div class="submenu">
+            <a href="{{ site.baseurl }}/usage#preprocessors-and-postcss">Preprocessors and PostCSS</a>
             <a href="{{ site.baseurl }}/usage#integrations">Integrations</a>
             <a href="{{ site.baseurl }}/usage#postcss-cli">postcss-cli</a>
             <a href="{{ site.baseurl }}/usage#nodejs">Node.js</a>
