Add installation note

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
           <h3>Introduction</h3>
           <div class="submenu">
             <a href="{{ site.baseurl }}/#what-is-ant">What is ant?</a>
+            <a href="{{ site.baseurl }}/#installation">Installation</a>
             <a href="{{ site.baseurl }}/#api">API</a>
             <a href="{{ site.baseurl }}/#postcss-ant-vs-flexbox">postcss-ant vs Flexbox</a>
             <a href="{{ site.baseurl }}/#flexboxs-strengths">Flexbox's Strengths</a>
