--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% if page.title %}{{ page.title }} | {% endif %}postcss-ant</title>
+    <title>{% if page.title %}{{page.title}} | {% endif %}postcss-ant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{site.baseurl}}/css/dist/reeeset.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/dist/style.css">
@@ -15,7 +15,7 @@
 
     {{content}}
 
-    <script src="{{site.baseurl}}/js/lib/zepto.min.js"></script>
+    <script src="{{site.baseurl}}/js/vendor/zepto.min.js"></script>
     <script src="{{site.baseurl}}/js/main.js"></script>
   </body>
 </html>
