--- a/css/src/style.css
+++ b/css/src/style.css
@@ -1,29 +1,81 @@
+p:last-of-type {
+  margin-bottom: 16px;
+  margin-bottom: 1rem;
+}
+
+:root {
+  -webkit-font-smoothing: antialiased;
+  font-size: 22px;
+  color: gray;
+}
+
+h1, h2, h3, h4, h5, h6, bold, strong {
+  color: #262626;
+}
+
+ul, ol {
+  list-style-position: inside;
+}
+
+a {
+  color: dodgerblue;
+}
+
 body {
-  overflow-y: auto;
+  height: 2000px;
+}
+
+#masthead {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
+}
+
+#masthead > #animated-grid-bg {
+  position: absolute;
+  width: 100vw;
   height: 100vh;
-  padding: 30px;
-  max-width: 600px;
-  margin: auto;
+  overflow: hidden;
+  display: none;
+  gg: columns(1/3 1/3 1/3) rows(1/3 1/3 1/3);
 }
 
-div {
-  margin-top: -50px;
+#masthead > #animated-grid-bg > * {
+  background: blue;
 }
 
-img {
-  width: 200px;
+#masthead #howdy {
+  display: flex;
 }
 
-h3 {
-  text-transform: uppercase;
-  font-size: 14px;
-  color: #d9d9d9;
-  letter-spacing: 2px;
-  font-weight: 100;
+@media (max-width: 680px) {
+  #masthead #howdy {
+    flex-direction: column;
+  }
+  #masthead #howdy > img {
+    width: 20%;
+  }
+}
+
+#masthead #howdy > div {
+  margin-right: 90px;
+}
+
+#masthead #howdy > div > a {
+  color: white;
+  background: dodgerblue;
+  text-decoration: none;
+  padding: .3333333em .6666666em;
+  border-radius: 3px;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+#masthead #howdy > img {
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
